libs/bng/test/positive/0300_rxn_patterns.bngl
# OK
# trivalent ligand, bivalent receptor
begin model
begin parameters
    # arbitrary parameters
    kp1   0.001
    kp2   0.010
    koff  0.100
end parameters

begin molecule types
    R(l,l)
    L(r,r,r)
end molecule types

begin reaction rules
    R(l) + L(r,r,r)     <-> R(l!1).L(r!1,r,r)      kp1, koff
    R(l) + L(r,r,r!+)   <-> R(l!1).L(r!1,r,r!+)    kp2, koff
    R(l) + L(r,r!+,r!+) <-> R(l!1).L(r!1,r!+,r!+)  kp2, koff
end reaction rules
end model

